[gd_scene load_steps=7 format=2]

[ext_resource path="res://img Pokemon/img MenuUser/bg.png" type="Texture" id=1]
[ext_resource path="res://Font/45Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://img Pokemon/img Fight/Graphique/Arrow.png" type="Texture" id=3]
[ext_resource path="res://GUI/MenuUser/MenuUser.gd" type="Script" id=4]
[ext_resource path="res://GUI/LoadingSave/LoadingSave.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "ChangeScene"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("ChangeScene/ChangeScene:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.03, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChangeScene/ChangeScene:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="MenuUser" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 725.0
margin_right = -1.0
margin_bottom = -182.0
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
margin_left = -1.10803
margin_right = 298.892
margin_bottom = 422.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow1" type="TextureRect" parent="."]
margin_left = 34.0
margin_top = 45.0
margin_right = 57.0
margin_bottom = 80.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokedex" type="Label" parent="."]
margin_left = 70.0
margin_top = 40.0
margin_right = 138.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "POKéDEX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow2" type="TextureRect" parent="."]
visible = false
margin_left = 34.0
margin_top = 105.0
margin_right = 57.0
margin_bottom = 140.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemon" type="Label" parent="."]
margin_left = 70.0
margin_top = 100.0
margin_right = 259.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "POKéMON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow3" type="TextureRect" parent="."]
visible = false
margin_left = 34.0
margin_top = 160.0
margin_right = 57.0
margin_bottom = 195.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sac" type="Label" parent="."]
margin_left = 70.0
margin_top = 160.0
margin_right = 151.0
margin_bottom = 205.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SAC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow4" type="TextureRect" parent="."]
visible = false
margin_left = 34.0
margin_top = 220.0
margin_right = 57.0
margin_bottom = 255.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profil" type="Label" parent="."]
margin_left = 70.0
margin_top = 220.0
margin_right = 206.0
margin_bottom = 265.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PROFIL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow5" type="TextureRect" parent="."]
visible = false
margin_left = 34.0
margin_top = 280.0
margin_right = 57.0
margin_bottom = 315.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sauver" type="Label" parent="."]
margin_left = 70.0
margin_top = 280.0
margin_right = 232.0
margin_bottom = 325.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SAUVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow6" type="TextureRect" parent="."]
visible = false
margin_left = 34.0
margin_top = 340.0
margin_right = 57.0
margin_bottom = 375.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retour" type="Label" parent="."]
margin_left = 68.892
margin_top = 337.618
margin_right = 230.892
margin_bottom = 382.618
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RETOUR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingSave" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = 10.0
margin_top = 425.0
margin_right = -8.0
margin_bottom = 39.0

[node name="UIInfo" type="ColorRect" parent="."]
anchor_left = -2.408
anchor_top = 1.26
anchor_right = -2.408
anchor_bottom = 1.26
margin_left = -3.60004
margin_top = -66.68
margin_right = 1022.4
margin_bottom = 73.32
color = Color( 0, 0.470588, 0.752941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UIInfo"]
margin_left = 22.0
margin_top = 12.0
margin_right = 736.0
margin_bottom = 124.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeScene" type="AnimationPlayer" parent="."]
anims/ChangeScene = SubResource( 1 )

[node name="ChangeScene" type="ColorRect" parent="ChangeScene"]
visible = false
margin_right = 1026.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
